--- a/docker_compose_api_dev.yml
+++ b/docker_compose_api_dev.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.9"
 services:
   api:
     build: .
@@ -19,45 +19,63 @@ services:
       - ACCESS_TOKEN_EXPIRE_MINUTES=$ACCESS_TOKEN_EXPIRE_MINUTES
     command: uvicorn app.app:app --host 0.0.0.0 --port 8000 --reload
     depends_on:
-      - postgres
-
-  postgres:
-    image: postgres
-    environment:
-      - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
-      - POSTGRES_DB=$POSTGRES_DB
-    volumes:
-      - postgres-db:/var/lib/postgresql/data
-    ports:
-        - "5432:5432"
+      - mysql-service
+    networks:
+      api_network:
+        ipv4_address: 192.168.1.6
 
   mysql-service:
     image: mysql/mysql-server:8.0.32
-    command: [ "--default-authentication-plugin=mysql_native_password" ]
+    command:
+      - "--default-authentication-plugin=mysql_native_password"
+      - "--init-file"
+      - "/docker-entrypoint-initdb.d/init.sql"
     container_name: mysql
     environment:
       MYSQL_RmysqlOOT_PASSWORD: $DATABASE_PASSWORD
       MYSQL_ROOT_HOST: '%'
       MYSQL_DATABASE: $POSTGRES_DB
+      MYSQL_ONETIME_PASSWORD: True
     volumes:
-        - /var/lib/mysql
+        - mysql-db:/var/lib/mysql
+        - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      api_network:
+        ipv4_address: 192.168.1.3
     ports:
         - "3307:3307"
   adminer-service:
     image: adminer:latest
     restart: unless-stopped
     container_name: adminer
+    networks:
+      api_network:
+        ipv4_address: 192.168.1.4
     depends_on:
-      - postgres
+      - mysql-service
     ports:
       - "8080:8080"
   mailsender:
     image: mailhog/mailhog
     restart: unless-stopped
     container_name: mail_sender
+    networks:
+      api_network:
+        ipv4_address: 192.168.1.5
     ports:
       - "8025:8025"
       - "1025:1025"
 
 volumes:
-  postgres-db:
+
+  mysql-db:
+    #external: true
+networks:
+  api_network:
+    driver: default
+    ipam:
+      driver: default
+      config:
+        - subnet: 192.168.1.0/24
+    external: true
+
