--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,14 @@ aiosmtplib==2.0.2
 alembic==1.13.1
 annotated-types==0.6.0
 anyio==4.3.0
+bcrypt==4.1.2
 blinker==1.7.0
+cffi==1.16.0
 click==8.1.7
 colorama==0.4.6
+cryptography==42.0.5
 dnspython==2.6.1
+ecdsa==0.18.0
 email_validator==2.1.1
 exceptiongroup==1.2.0
 fastapi==0.110.0
@@ -17,12 +21,19 @@ idna==3.6
 Jinja2==3.1.3
 Mako==1.3.2
 MarkupSafe==2.1.5
+passlib==1.7.4
+pyasn1==0.6.0
+pycparser==2.22
 pydantic==2.6.4
 pydantic-settings==2.2.1
 pydantic_core==2.16.3
 PyMySQL==1.0.2
 python-dotenv==1.0.1
+python-jose==3.3.0
+python-multipart==0.0.9
 PyYAML==6.0.1
+rsa==4.9
+six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.29
 starlette==0.36.3
