--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiosmtplib==2.0.2
 alembic==1.13.1
 annotated-types==0.6.0
 anyio==4.3.0
+APScheduler==3.10.4
 bcrypt==4.1.2
 blinker==1.7.0
 cffi==1.16.0
@@ -31,6 +32,7 @@ PyMySQL==1.0.2
 python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.9
+pytz==2024.1
 PyYAML==6.0.1
 rsa==4.9
 six==1.16.0
@@ -38,6 +40,7 @@ sniffio==1.3.1
 SQLAlchemy==2.0.29
 starlette==0.36.3
 typing_extensions==4.10.0
+tzlocal==5.2
 uvicorn==0.29.0
 watchfiles==0.21.0
 websockets==12.0
